src/objects/Autodoc_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Case_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Item</label>
        <referenceTo>Case_Item__c</referenceTo>
        <relationshipLabel>Autodoc Reporting</relationshipLabel>
        <relationshipName>Autodoc_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Autodoc Reporting</relationshipLabel>
        <relationshipName>Autodoc_Reporting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <formula>TEXT(Case__r.Topic__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic</label>
        <type>Text</type>
    </fields>
    <label>Autodoc Reporting</label>
    <nameField>
        <displayFormat>Autodoc-{000000000}</displayFormat>
        <label>Autodoc Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Autodoc Reporting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>